Sat Jun 11 11:24:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/iso_8859.h (SHARP_s): name frequently used codepoint.

Sat Jun 11 09:58:45 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_1.c: Revert to older version of code.

Sat Jun 11 09:46:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_1.c: Implement non-ASCII case mapping.

	* test/ruby/enc/test_case_comprehensive.rb: Tests for above.

	* string.c: Add iso-8859-1 to supported encodings.

Sat Jun 11 09:31:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (_delegator_method): leave the backtrace
	  untouched during accessor.  forwardable.rb does not appear in
	  the backtrace during delegated method because of tail-call
	  optimization.

Sat Jun 11 01:38:31 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (GCC_VERSION_SINCE): Fix logic error by
	  adding parentheses. Fix failures of TestMkmf::TestConvertible
	  with GCC 3.4.3 on Solaris 10. [Bug #12479] [ruby-dev:49660]

Fri Jun 10 21:54:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (Forwardable._delegator_method): extract
	  method generator and deal with non-module objects.
	  [ruby-dev:49656] [Bug #12478]

Fri Jun 10 17:35:11 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Special-case :ascii option in rb_str_capitalize_bang and
	  rb_str_swapcase_bang.

Fri Jun 10 17:12:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Special-case :ascii option in rb_str_upcase_bang (retry).

Fri Jun 10 14:48:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (get_env_cstr): ensure NUL-terminated.
	  [ruby-dev:49655] [Bug #12475]

	* string.c (rb_str_fill_terminator): return the pointer to the
	  NUL-terminated content.

Thu Jun  9 21:42:00 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c (asn1integer_to_num): Use
	  ASN1_ENUMERATED_to_BN() to convert an ASN1_ENUMERATED to a BN.